# ai-flowops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-vm.yml
agents/: __init__.py  base.py  brief_generation.py  contract_risk.py  critic.py  evidence.py  finance_review.py  implementation_review.py  normalization.py  openai_review.py  routing_recommendation.py  security_review.py  task_generation.py
app/: guided_demo.py  main.py  routes.py  settings.py
app/static/: style.css
app/templates/: approval_detail.html  approvals.html  base.html  case_detail.html  cases.html  demo_architecture.html  demo_case.html  demo_cases.html  demo_department_packet.html  demo_document.html  demo_document_package.html  demo_evidence_map.html  demo_kpi_dashboard.html  demo_overview.html  demo_source_document.html  evals.html  (+4 more)
docs/: architecture.md  build-plan.md  demo-script.md  vm-deploy.md
evals/: runner.py
playbooks/: default.yaml
schemas/: __init__.py  case.py  playbook.py
scripts/: complete_real_case.py  demo_reset.py  export_real_case_case_room.py  prepare_guided_demo_ai.py  prepare_real_case.py  reset_db.py  run_case.py  run_evals.py  seed_cases.py
tests/: test_app.py  test_evals.py  test_guided_demo.py  test_openai_review.py  test_orchestrator.py  test_package_profile.py  test_playbook.py  test_real_case_completion.py  test_routing.py  test_schema.py  test_storage.py
workflows/: __init__.py  orchestrator.py  package_profile.py  playbook.py  routing.py  seeding.py  storage.py
(+43 files in other folders)
